--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.61",
