--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@gsap/react": "^2.1.0",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.73",
